流程图sideBar初步展示

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "element",
+  "name": "test-by-element",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "element-ui": "^2.15.1",
     "less": "^4.1.1",
     "less-loader": "^4.1.0",
+    "mxgraph": "^4.2.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
