--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "less": "^4.1.1",
     "less-loader": "^4.1.0",
     "mxgraph": "^4.2.2",
+    "style-resources-loader": "^1.4.1",
     "vue": "^2.6.11",
+    "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
